deploy/k8s/thv.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: toolhive
  labels:
    app: toolhive
    app.kubernetes.io/name: toolhive
spec:
  serviceName: toolhive
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: toolhive
  template:
    metadata:
      labels:
        app: toolhive
        app.kubernetes.io/name: toolhive
    spec:
      containers:
      - name: toolhive
        image: ko://github.com/stacklok/toolhive/cmd/thv
        args: ["run", "--foreground=true", "--port=8080", "--name=mcp-fetch", "docker.io/mcp/fetch"]
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: toolhive
spec:
  selector:
    app.kubernetes.io/name: toolhive
  ports:
    - protocol: TCP
      appProtocol: kubernetes.io/h2c
      port: 8080
      targetPort: 8080
