deploy/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /sse
        backend:
          service:
            name: toolhive
            port:
              number: 8080
      - pathType: Prefix
        path: /messages
        backend:
          service:
            name: toolhive
            port:
              number: 8080
